# realtime-translator

./: .gitignore  GLOSSARY_GUIDE.md  README.md  TRANSLATION_IMPROVEMENTS.md  audio_capture.py  build.bat  build.spec  glossary.py  locales.py  logger_config.py  main.py  overlay.py  pyproject.toml  requirements.txt  run.bat  settings.json  settings.py  settings_ui.py  test_audio.py  test_conversation.py  test_filter.py  test_models.py  transcriber.py  translator.py  transliterate.py
