[project]
name = "realtime-translator"
version = "0.2.0"
description = "Real-time bi-directional voice translation overlay for gaming (Russian <-> English)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.1.0",
    "numpy<2.0",
    "sacremoses>=0.1.1",
    "sentencepiece>=0.2.0",
    "soundcard>=0.4.3",
    "transformers>=4.40.0",
    "keyboard>=0.13.5",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "gtts>=2.5.4",
    "pygame>=2.6.1",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
